Add file traversal

--- a/thermal_preprocess.ipynb
+++ b/thermal_preprocess.ipynb
@@ -358,6 +358,69 @@
     "print get_label_by_frame(1,410)\n",
     "timestamps"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40572\n"
+     ]
+    }
+   ],
+   "source": [
+    "thermal_folder = \"thermal_images/\"\n",
+    "timestamp_folder = \"project_data/thermal_timestamps.csv\"\n",
+    "label_folder = \"project_data/labels.csv\"\n",
+    "\n",
+    "timestamps = pd.read_csv(timestamp_folder, index_col=0)\n",
+    "labels = pd.read_csv(label_folder, usecols=[0,1], dtype={\"id\": int, \"label\": str}, index_col=0)\n",
+    "\n",
+    "def get_story_by_frame(subject, frame):\n",
+    "    second= frame/10.0 if (subject<15) else frame\n",
+    "    sub_data = timestamps.loc[subject].values\n",
+    "    i, j = 0, 1\n",
+    "    story = -1\n",
+    "    for k in range(3):\n",
+    "        if (sub_data[i] <= second <= sub_data[j]):\n",
+    "            story = k+1\n",
+    "            break\n",
+    "        i += 2\n",
+    "        j += 2\n",
+    "    return story\n",
+    "\n",
+    "def get_label_by_frame(subject, frame):\n",
+    "    story = get_story_by_frame(subject, frame)\n",
+    "    if (story == -1): return None\n",
+    "    return labels.loc[subject].values[0][story-1]\n",
+    "\n",
+    "def csv_tranverse(path):\n",
+    "    walker = os.walk(path)\n",
+    "    walker.next()\n",
+    "    for root, dirs, files in walker:\n",
+    "        for f in files:\n",
+    "#             print root, f\n",
+    "#             yield pd.read_csv(\"{}/{}\".format(root, f), header=None).as_matrix()\n",
+    "\n",
+    "\n",
+    "\n",
+    "csv_generator = csv_tranverse(thermal_folder)\n",
+    "c = 0\n",
+    "for frame in csv_generator:\n",
+    "    c += 1\n",
+    "print c\n",
+    "# for frame, label in csv_generator:\n",
+    "#     frame_1[frame_1 < 30] = 0\n",
+    "#     frame_1 = frame_1[np.where(frame_1 != 0)].flatten()\n",
+    "#     features = np.array([frame_1.min(), frame_1.max(), np.mean(frame_1)])\n",
+    "#     features = np.append(features, features[1] - features[0])\n",
+    "#     bins_places = np.histogram(frame_1, np.linspace(30, 37.0, 101))[0]\n",
+    "#     features = np.concatenate((features, bins_places))"
+   ]
   }
  ],
  "metadata": {
