Retrieve all csv frame data for processing

--- a/thermal_preprocess.ipynb
+++ b/thermal_preprocess.ipynb
@@ -373,18 +373,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_bins(bin_places):\n",
+    "    cm = plt.cm.get_cmap('plasma')\n",
+    "    n, bins, patches = plt.hist(frame_1, bins=bin_places[1], color='green')\n",
+    "    bin_centers = 0.5 * (bins[:-1] + bins[1:])\n",
+    "    col = bin_centers - min(bin_centers)\n",
+    "    col /= max(col)\n",
+    "    for c, p in zip(col, patches):\n",
+    "        plt.setp(p, 'facecolor', cm(c))\n",
+    "    plt.savefig(\"temp.png\", dpi=1000)\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAD8CAYAAAB5Pm/hAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAEwVJREFUeJzt3X+MXWd95/H3h+AGCnRDmiFrbGvN\nQigC2ho0TbPLLguJWIL/2KRqCs6qJMoGuYVELWzVJbR/UNBGCtuWILpLJKOEOBWQRvwIVup2NzXR\nQrQlYZIakx8kdSFR7DXxUBIgRWTr9Lt/zLHnYubHnZl7fTzPvF/SkZ/znHPv+T6648+cee6556aq\nkCS161l9FyBJGi+DXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDXOoJekxhn0ktS4Z/ddAMAZZ5xR\nmzdv7rsMSVpV7rnnnu9U1cRi+50UQb9582ampqb6LkOSVpUkjw6zn1M3ktQ4g16SGmfQS1LjDHpJ\napxBL0mNM+glqXEGvSQ1zqCXpMYZ9JLUuJPik7FaG5J7j7WrXttjJdLa4hm9JDXOoJekxhn0ktQ4\ng16SGmfQS1LjDHpJapxBL0mN8zp6jdUH/6LvCiQZ9OpFkmPtqprdcNHPz7Y/8/UTWJHULqduJKlx\niwZ9kuckuTvJ15Lcn+QDXf+NSb6VZG+3bOn6k+SjSfYn2ZfEz7pLUo+Gmbp5Gji3qp5Ksg64M8nR\nmdffrarPHLf/W4CzuuWXgeu6fyVJPVg06GtmAvWpbnVdt9T8j+AC4KbucV9JclqS9VV1aMXVqklX\nDczXX/Orr17287xr4Hk+Vgv9iEpry1Bz9ElOSbIXOAzcXlV3dZuu7qZnrk1yate3AXhs4OEHuj5J\nUg+GCvqqeqaqtgAbgbOTvBp4H/AK4JeA04H3LuXASbYnmUoyNT09vcSyJUnDWtJVN1X1JHAHcH5V\nHaoZTwOfAM7udjsIbBp42Mau7/jn2lFVk1U1OTExsbzqJUmLGuaqm4kkp3Xt5wJvAr6RZH3XF+BC\n4L7uIbuAS7qrb84Bvuf8vCT1Z5irbtYDO5Ocwswvhluq6rYkX0wyAQTYC/xmt/9uYCuwH/ghcNno\ny5YkDWuYq272Aa+Zo//cefYv4IqVlyZJGgU/GStJjTPoJalxBr0kNc67V2pNOfD0bHvjqfPvJ7XE\nM3pJapxBL0mNM+glqXEGvSQ1zqCXpMZ51Y1WtWTrsfY7B/r/YeDe9M/z3vRa4wx6Lcm8X+ot6aTl\n1I0kNc6gl6TGOXWjVSd5uO8SpFXFoFf79t862950YX91SD1x6kaSGucZvU5eB/fMtjec118d0irn\nGb0kNc6gl6TGLRr0SZ6T5O4kX0tyf5IPdP0vSXJXkv1J/izJT3X9p3br+7vtm8c7BEnSQoY5o38a\nOLeqfhHYApyf5BzgQ8C1VfUy4Ang8m7/y4Enuv5ru/0kST1ZNOhrxlPd6rpuKeBc4DNd/07g6HVr\nF3TrdNvPy+Dn5iVJJ9RQc/RJTkmyFzgM3A78HfBkVR3pdjkAbOjaG4DHALrt3wN+do7n3J5kKsnU\n9PT0ykYhSZrXUEFfVc9U1RZgI3A28IqVHriqdlTVZFVNTkxMrPTpJEnzWNJVN1X1JHAH8K+A05Ic\nvQ5/I3Cwax8ENgF02/8Z8PcjqVaStGSLfmAqyQTwj1X1ZJLnAm9i5g3WO4CLgJuBS4EvdA/Z1a3/\ndbf9i+X9bNu3/V/Ptnf8n5E//UfuHPlTSmvGMJ+MXQ/sTHIKM38B3FJVtyV5ALg5yX8F/ga4vtv/\neuBPk+wHvgtsG0PdkqQhLRr0VbUPeM0c/d9kZr7++P4fAb82kuokSSvmJ2MlqXEGvSQ1zqDXst2b\nHFsknbwMeklqnEEvSY0z6CWpcX7DlBaV/O++S5C0Ap7RS1LjDHpJapxTN5rTz1/UdwWSRsUzeklq\nnEEvSY0z6CWpcQa9JDXON2OXaOvvz7Z3X91fHZI0LM/oJalxBr0kNc6gl6TGLRr0STYluSPJA0nu\nT/LbXf8fJDmYZG+3bB14zPuS7E/yUJI3j3MAkqSFDfNm7BHgd6rq3iQvAO5Jcnu37dqq+qPBnZO8\nkpkvBH8V8GLgr5K8vKqeGWXhkqThLHpGX1WHqurerv0D4EFgwwIPuQC4uaqerqpvAfuZ40vEJUkn\nxpLm6JNsBl4D3NV1XZlkX5Ibkryw69sAPDbwsAMs/ItBkjRGQwd9kucDnwXeXVXfB64DXgpsAQ4B\nf7yUAyfZnmQqydT09PRSHipJWoKhgj7JOmZC/pNV9TmAqnq8qp6pqn8CPs7s9MxBYNPAwzd2fT+m\nqnZU1WRVTU5MTKxkDJKkBQxz1U2A64EHq+rDA/3rB3b7FeC+rr0L2Jbk1CQvAc4C7h5dyZKkpRjm\nqpvXAW8Hvp5kb9f3e8DFSbYABTwC/AZAVd2f5BbgAWau2LnCK25Wh2eq7wokjcOiQV9VdwKZY9Pu\nBR5zNeCdYCTpJOBNzYZR/ziwsq63Msbizo/Mtl/37v7q6MHpr/rx9e/e308d0rh5CwRJapxBL0mN\nM+glqXEGvSQ1zqCXpMYZ9JLUOINekhrndfQrkHzzWLvqX/ZYiUYh2XasXXVzj5VIo2XQj8jMzT1n\nVD3VYyWS9OOculmDHk6OLZLaZ9BLUuMMeklqnEEvSY0z6CWpcV5106jkXcfaVR/rsRJJffOMXpIa\nZ9BLUuOcuhmDWweuT7+w/CJWSf1a9Iw+yaYkdyR5IMn9SX676z89ye1J/rb794Vdf5J8NMn+JPuS\nvHbcg9CMzefOLpJ01DBTN0eA36mqVwLnAFckeSVwFbCnqs4C9nTrAG8BzuqW7cB1I69akjS0RYO+\nqg5V1b1d+wfAg8AG4AJgZ7fbTuDCrn0BcFPN+ApwWpL1I69ckjSUJb0Zm2Qz8BrgLuDMqjrUbfo2\ncGbX3gA8NvCwA13f8c+1PclUkqnp6eklli1JGtbQQZ+Z2zN+Fnh3VX1/cFtVFbCkdx2rakdVTVbV\n5MTExFIeKklagqGuukmyjpmQ/2RVfa7rfjzJ+qo61E3NHO76DwKbBh6+sevTkSdm289+4aK7bxu4\neudmr96RtEzDXHUT4Hrgwar68MCmXcClXftS4AsD/Zd0V9+cA3xvYIpHknSCDXNG/zrg7cDXk+zt\n+n4PuAa4JcnlwKPAW7ttu4GtwH7gh8BlI61YS7b1uPvOf6SnOiT1Y9Ggr6o7gfm+oeK8OfYv4IoV\n1tW/T71ntn3xf+uvjrn8zQ3Hmre+4D/1WEi7zhz45fi402Za5bwFgiQ1zlsg9OSmfbPtS36hvzok\ntW/NB30G/kQv/0SX1KA1H/Qng+TwsXbVi3qsRFKLnKOXpMYZ9JLUOIN+tXjV6bOLJC2BQT9gT3Js\nkaRW+GbsuL1+4LY/X9w3/36SNCYG/Ukm+fVj7bf1WIekdjh1I0mNM+glqXEGvSQ1zqCXpMYZ9JLU\nOINekhrX9OWV9w58RetrF/+KVmlOhwc+QPci73CqVcgzeklq3DBfDn5DksNJ7hvo+4MkB5Ps7Zat\nA9vel2R/koeSvHlchUuShjPM1M2NwH8Hbjqu/9qq+qPBjiSvBLYBrwJeDPxVkpdX1TMjqHVkkg/1\nXYIknTCLntFX1ZeA7w75fBcAN1fV01X1LWA/cPYK6pMkrdBK5uivTLKvm9o5+lbnBuCxgX0OdH2S\npJ4sN+ivA14KbAEOAX+81CdIsj3JVJKp6enpZZYhSVrMsi6vrKrHj7aTfBy4rVs9CAzcl5eNXd9c\nz7ED2AEwOTk59mvW/u27xn0ESTo5LeuMPsn6gdVfAY5ekbML2Jbk1CQvAc4C7l5ZiZKklVj0jD7J\np4E3AGckOQC8H3hDki1AAY8AvwFQVfcnuQV4ADgCXHGyXXEjSWvNokFfVRfP0X39AvtfDVy9kqKW\n7bb3//j66z7QSxmSdDLxk7GS1DiDXpIaZ9BLUuMMeklqnEEvSY0z6CWpcQa9JDVu9Qd9MrtIkn7C\n6g96SdKCDHpJapxBL0mNM+glqXEGvSQ1zqCXpMYt6xumpDXrD7fNtn/35v7qkJbAoJdGYNPrZ9uP\nfam/OqS5OHUjSY3zjF5apieO9F2BNJxFz+iT3JDkcJL7BvpOT3J7kr/t/n1h158kH02yP8m+JK8d\nZ/GSpMUNM3VzI3D+cX1XAXuq6ixgT7cO8BbgrG7ZDlw3mjKl1SO59dginQwWDfqq+hLw3eO6LwB2\ndu2dwIUD/TfVjK8ApyVZP6piJUlLt9w3Y8+sqkNd+9vAmV17A/DYwH4Huj5JUk9WfNVNVRVQS31c\nku1JppJMTU9Pr7QMSdI8lhv0jx+dkun+Pdz1HwQ2Dey3sev7CVW1o6omq2pyYmJimWVIkhaz3KDf\nBVzatS8FvjDQf0l39c05wPcGpngkST1Y9Dr6JJ8G3gCckeQA8H7gGuCWJJcDjwJv7XbfDWwF9gM/\nBC4bQ82SpCVYNOir6uJ5Np03x74FXLHSoiRJo+MtECSpcQa9JDXOoJekxhn0ktQ4g16SGmfQS1Lj\nDHpJapxfPCKN0fOTY+2nasm3hJJGwjN6SWqcQS9JjTPoJalxBr0kNc6gl6TGGfSS1DiDXpIaZ9BL\nUuMMeklqnEEvSY3zFgjSCXLdwO0Q3untEHQCrSjokzwC/AB4BjhSVZNJTgf+DNgMPAK8taqeWFmZ\nkqTlGsUZ/Rur6jsD61cBe6rqmiRXdevvHcFxpHb8/tbZ9tW7+6tDa8I45ugvAHZ27Z3AhWM4hiRp\nSCsN+gL+V5J7kmzv+s6sqkNd+9vAmXM9MMn2JFNJpqanp1dYhiRpPiuduvk3VXUwyYuA25N8Y3Bj\nVVWSOd91qqodwA6AyclJ35mSpDFZ0Rl9VR3s/j0MfB44G3g8yXqA7t/DKy1SkrR8yw76JM9L8oKj\nbeDfA/cBu4BLu90uBb6w0iIlScu3kqmbM4HPZ+ba4GcDn6qqv0zyVeCWJJcDjwJvXXmZkqTlWnbQ\nV9U3gV+co//vgfNWUpQkaXS8BYIkNc6gl6TGea8bqW//8PBs+3kv768ONcszeklqnEEvSY0z6CWp\ncQa9JDXOoJekxhn0ktQ4g16SGmfQS1LjDHpJapyfjJVOIu/51Gz72v/YXx1qi2f0ktQ4g16SGmfQ\nS1LjDHpJapxvxkonqWTPwNq7j7Wqvn7ii9GqNrYz+iTnJ3koyf4kV43rOJKkhY3ljD7JKcD/AN4E\nHAC+mmRXVT0wjuNJa8mHkmPt91b1WIlWi3Gd0Z8N7K+qb1bV/wNuBi4Y07GkteunM7tI8xhX0G8A\nHhtYP9D1SZJOsNQY/vRLchFwflW9o1t/O/DLVXXlwD7bge3d6s8BDy3zcGcA31lBuauRY14bHPPa\nsJIx/4uqmlhsp3FddXMQ2DSwvrHrO6aqdgA7VnqgJFNVNbnS51lNHPPa4JjXhhMx5nFN3XwVOCvJ\nS5L8FLAN2DWmY0mSFjCWM/qqOpLkSuB/AqcAN1TV/eM4liRpYWP7wFRV7QZ2j+v5B6x4+mcVcsxr\ng2NeG8Y+5rG8GStJOnl4rxtJatyqCvokz0lyd5KvJbk/yQe6/k92t1u4L8kNSdb1XeuoLDDm67u+\nfUk+k+T5fdc6KvONeWD7R5M81Vd9o7bAa3xjkm8l2dstW/qudVQWGHOSXJ3k4SQPJvmtvmsdlQXG\n/OWB1/j/Jrl15AevqlWzAAGe37XXAXcB5wBbu20BPg28s+9aT8CYf2Zgnw8DV/Vd67jH3K1PAn8K\nPNV3nSfgNb4RuKjv+k7wmC8DbgKe1W17Ud+1jnvMx+3zWeCSUR97VZ3R14yjZ3LruqWqane3rYC7\nmbluvwkLjPn7MHMGBDwXaObNlvnG3N1D6Q+B/9JbcWMw33h7LGnsFhjzO4EPVtU/dfsd7qnEkVvs\ndU7yM8C5wMjP6FdV0MPMDdOS7AUOA7dX1V0D29YBbwf+sq/6xmG+MSf5BPBt4BXAn/RY4sjNM+Yr\ngV1Vdajf6kZvgZ/rq7vpuWuTnNpjiSM3z5hfCrwtyVSSv0hyVr9VjtZC+QVcCOw5ehI3Sqsu6Kvq\nmarawsxZ+9lJXj2w+WPAl6rqy/1UNx7zjbmqLgNeDDwIvK3HEkdujjG/Hvg1GvuFdtQ8r/H7mPkl\n/kvA6cB7eyxx5OYZ86nAj2rmk6IfB27os8ZRWyS/LmZm6nnkVl3QH1VVTwJ3AOcDJHk/MAH85z7r\nGqfjx9z1PcPM3UF/ta+6xmlgzG8EXgbsT/II8NNJ9vdZ2zgMvsZVdaj7c/9p4BPM3BW2Ocf9XB8A\nPtdt+jzwC33VNU5z5NcZzLy+fz6O462qoE8ykeS0rv1cZu53/40k7wDeDFx8dG6vFfOM+aEkL+v6\nAvwH4Bv9VTla84z5nqr651W1uao2Az+sqpf1WeeoLPBzvb7rCzN/1t/XX5WjNd+YmZmffmO3278D\nHu6nwtFbYMwAFwG3VdWPxnHs1fZVguuBnd2bcs8Cbqmq25IcAR4F/nrm/wSfq6oP9ljnKP3EmJn5\nrf/l7s2bAF9j5k2sVsz5Ovdc0zjN93P9xSQTzLzGe4Hf7LPIEZtvzHcCn0zyHuAp4B19FjliC/1c\nbwOuGdeB/WSsJDVuVU3dSJKWzqCXpMYZ9JLUOINekhpn0EtS4wx6SWqcQS9JjTPoJalx/x//5jhq\ng1w0AAAAAABJRU5ErkJggg==\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fea297a9810>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "369\n",
+      "(10, 369, array([[ 22.14158,  22.14158,  22.14727, ...,  21.93642,  21.93642,\n",
+      "         21.93642],\n",
+      "       [ 22.13588,  22.13588,  22.13588, ...,  21.93642,  21.93642,\n",
+      "         21.93642],\n",
+      "       [ 22.13588,  22.13588,  22.13588, ...,  21.93642,  21.93642,\n",
+      "         21.93642],\n",
+      "       ..., \n",
+      "       [ 22.71492,  22.71492,  22.71492, ...,  22.51661,  22.52228,\n",
+      "         22.52228],\n",
+      "       [ 22.71492,  22.71492,  22.71492, ...,  22.51093,  22.51093,\n",
+      "         22.51093],\n",
+      "       [ 22.71492,  22.71492,  22.71492, ...,  22.49392,  22.50526,\n",
+      "         22.50526]]), 2)\n"
+     ]
     }
    ],
    "source": [
@@ -402,10 +432,12 @@
     "\n",
     "timestamps = pd.read_csv(timestamp_folder, index_col=0)\n",
     "labels = pd.read_csv(label_folder, usecols=[0,1], dtype={\"id\": int, \"label\": str}, index_col=0)\n",
+    "# print timestamps.loc[10]\n",
     "\n",
     "def get_story_by_frame(subject, frame):\n",
     "    second= frame/10.0 if (subject<15) else frame\n",
     "    sub_data = timestamps.loc[subject].values\n",
+    "    if (second < sub_data[0]): return 2\n",
     "    i, j = 0, 1\n",
     "    story = -1\n",
     "    for k in range(3):\n",
@@ -418,27 +450,23 @@
     "\n",
     "def get_label_by_frame(subject, frame):\n",
     "    story = get_story_by_frame(subject, frame)\n",
-    "    if (story == -1): return None\n",
+    "    if (story == -1): return -1 \n",
+    "    if (story == 2): return 2\n",
     "    return labels.loc[subject].values[0][story-1]\n",
     "\n",
-    "def csv_tranverse(path):\n",
-    "    walker = os.walk(path)\n",
-    "    walker.next()\n",
+    "def frame_with_info_traverse(thermal_path):\n",
+    "    walker = os.walk(thermal_path)\n",
+    "    walker.next() # skip the main dir\n",
     "    for root, dirs, files in walker:\n",
-    "        subject = root.split(\"/\")[-2]\n",
+    "        if (len(files) == 0): continue\n",
+    "        subject = int(root.split(\"/\")[-2].strip(\"Subject\")) # thermal_images/Subject10/CSV images => 10\n",
     "        for f in files:\n",
-    "            yield pd.read_csv(os.path.join(root, f)).as_matrix()\n",
-    "\n",
-    "def plot_bins(bin_places):\n",
-    "    cm = plt.cm.get_cmap('plasma')\n",
-    "    n, bins, patches = plt.hist(frame_1, bins=bin_places[1], color='green')\n",
-    "    bin_centers = 0.5 * (bins[:-1] + bins[1:])\n",
-    "    col = bin_centers - min(bin_centers)\n",
-    "    col /= max(col)\n",
-    "    for c, p in zip(col, patches):\n",
-    "        plt.setp(p, 'facecolor', cm(c))\n",
-    "    plt.savefig(\"temp.png\", dpi=1000)\n",
-    "    plt.show()\n",
+    "            frame_nr = int(f.split(\"_\")[1].strip(\".csv\")) # FL-000020_369.csv => 369\n",
+    "            print frame_nr\n",
+    "            label = get_label_by_frame(subject, frame_nr)\n",
+    "            if (label == -1): continue\n",
+    "            csv_frame = pd.read_csv(os.path.join(root, f)).as_matrix()\n",
+    "            yield (subject, frame_nr, csv_frame, label)\n",
     "\n",
     "def extract_frame_features(frame):\n",
     "    frame_1[frame_1 < filter_temp] = 0 #filter all pixels lower than 30\n",
@@ -446,16 +474,19 @@
     "    features = np.array([frame_1.min(), frame_1.max(), np.mean(frame_1)]) # get mean, max and min values of pixels\n",
     "    features = np.append(features, features[1] - features[0]) # add max difference in pixels\n",
     "    bin_places = np.histogram(frame_1, np.linspace(filter_temp, 37.0, 101))[0] # take the values of the bins\n",
+    "#     plot_bins(bin_places) # plot the bins if needed\n",
     "    features = np.concatenate((features, bins_places)) # add primary features to bin features\n",
     "    return features\n",
     "\n",
     "\n",
-    "csv_generator = csv_tranverse(thermal_folder)\n",
-    "# for frame, label in csv_generator:\n",
+    "csv_generator = frame_with_info_traverse(thermal_folder)\n",
+    "for subject, n, label in csv_generator:\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    \n",
     "    \n",
     "\n",
-    "# plot_bins(bin_places)\n",
     "\n",
     "# print bin_places "
    ]
