Add dict for storing all user stories with label

--- a/thermal_preprocess.ipynb
+++ b/thermal_preprocess.ipynb
@@ -8,8 +8,6 @@
    "source": [
     "import os\n",
     "\n",
-    "# def tranverse_folder(oswalker):\n",
-    "   \n",
     "thermal_dir = \"thermal_images\"\n",
     "for root, dirs, files in os.walk(thermal_dir):\n",
     "    for f in files:\n",
@@ -60,16 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -338,7 +329,7 @@
        "24   82  122  147  204  209  273"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,9 +356,7 @@
     "    story = get_story_by_frame(subject, frame)\n",
     "    if (story == -1): return None\n",
     "    return labels.loc[subject].values[0][story-1]\n",
-    "    \n",
     "\n",
-    "print get_label_by_frame(1,410)\n",
     "timestamps"
    ]
   },
@@ -391,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 65,
    "metadata": {
     "scrolled": false
    },
@@ -400,20 +389,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "369\n",
-      "(10, 369, array([[ 22.14158,  22.14158,  22.14727, ...,  21.93642,  21.93642,\n",
-      "         21.93642],\n",
-      "       [ 22.13588,  22.13588,  22.13588, ...,  21.93642,  21.93642,\n",
-      "         21.93642],\n",
-      "       [ 22.13588,  22.13588,  22.13588, ...,  21.93642,  21.93642,\n",
-      "         21.93642],\n",
-      "       ..., \n",
-      "       [ 22.71492,  22.71492,  22.71492, ...,  22.51661,  22.52228,\n",
-      "         22.52228],\n",
-      "       [ 22.71492,  22.71492,  22.71492, ...,  22.51093,  22.51093,\n",
-      "         22.51093],\n",
-      "       [ 22.71492,  22.71492,  22.71492, ...,  22.49392,  22.50526,\n",
-      "         22.50526]]), 2)\n"
+      "{1: 0.0, 2: 0.0, 3: 0.0, 4: 0.0, 5: 0.0, 6: 0.0, 7: 0.0, 8: 0.0, 9: 0.0, 10: 0.0, 11: 0.0, 12: 0.0, 13: 0.0, 14: 0.0, 15: 0.0, 16: 0.0, 17: 0.0, 18: 0.0, 19: 0.0, 20: 0.0, 21: 0.0, 22: 0.0, 23: 0.0, 24: 0.0}\n"
      ]
     }
    ],
@@ -432,12 +408,13 @@
     "\n",
     "timestamps = pd.read_csv(timestamp_folder, index_col=0)\n",
     "labels = pd.read_csv(label_folder, usecols=[0,1], dtype={\"id\": int, \"label\": str}, index_col=0)\n",
+    "game = pd.read_csv(label_folder, usecols=[0,1], dtype={\"id\": int, \"game\": int}, index_col=0)\n",
     "# print timestamps.loc[10]\n",
     "\n",
     "def get_story_by_frame(subject, frame):\n",
     "    second= frame/10.0 if (subject<15) else frame\n",
     "    sub_data = timestamps.loc[subject].values\n",
-    "    if (second < sub_data[0]): return 2\n",
+    "    if (second < sub_data[0]): return 0\n",
     "    i, j = 0, 1\n",
     "    story = -1\n",
     "    for k in range(3):\n",
@@ -450,53 +427,134 @@
     "\n",
     "def get_label_by_frame(subject, frame):\n",
     "    story = get_story_by_frame(subject, frame)\n",
-    "    if (story == -1): return -1 \n",
-    "    if (story == 2): return 2\n",
-    "    return labels.loc[subject].values[0][story-1]\n",
+    "    if (story == 0 or story == -1): return (story, -1)\n",
+    "    return (story, labels.loc[subject].values[0][story-1])\n",
     "\n",
     "def frame_with_info_traverse(thermal_path):\n",
     "    walker = os.walk(thermal_path)\n",
     "    walker.next() # skip the main dir\n",
     "    for root, dirs, files in walker:\n",
-    "        if (len(files) == 0): continue\n",
+    "        if (len(files) == 0): continue # if the folder is empty or is root folder\n",
     "        subject = int(root.split(\"/\")[-2].strip(\"Subject\")) # thermal_images/Subject10/CSV images => 10\n",
     "        for f in files:\n",
     "            frame_nr = int(f.split(\"_\")[1].strip(\".csv\")) # FL-000020_369.csv => 369\n",
-    "            print frame_nr\n",
-    "            label = get_label_by_frame(subject, frame_nr)\n",
-    "            if (label == -1): continue\n",
-    "            csv_frame = pd.read_csv(os.path.join(root, f)).as_matrix()\n",
-    "            yield (subject, frame_nr, csv_frame, label)\n",
+    "            story, label = get_label_by_frame(subject, frame_nr) # get the story number and label of the frame\n",
+    "            if (story == -1): continue # skip if the frame is between the stories\n",
+    "            csv_frame = pd.read_csv(os.path.join(root, f)).as_matrix() # read the csv data\n",
+    "            yield (subject, story, frame_nr, csv_frame, label)\n",
     "\n",
-    "def extract_frame_features(frame):\n",
+    "def extract_frame_features(frame_1):\n",
     "    frame_1[frame_1 < filter_temp] = 0 #filter all pixels lower than 30\n",
     "    frame_1 = frame_1[np.where(frame_1 != 0)].flatten() # new array with only filtered values\n",
     "    features = np.array([frame_1.min(), frame_1.max(), np.mean(frame_1)]) # get mean, max and min values of pixels\n",
     "    features = np.append(features, features[1] - features[0]) # add max difference in pixels\n",
     "    bin_places = np.histogram(frame_1, np.linspace(filter_temp, 37.0, 101))[0] # take the values of the bins\n",
     "#     plot_bins(bin_places) # plot the bins if needed\n",
-    "    features = np.concatenate((features, bins_places)) # add primary features to bin features\n",
+    "    features = np.concatenate((features, bin_places)) # add primary features to bin features\n",
     "    return features\n",
     "\n",
     "\n",
     "csv_generator = frame_with_info_traverse(thermal_folder)\n",
-    "for subject, n, label in csv_generator:\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "baseline_count = dict(zip(range(1, 25), np.zeros(24)))\n",
+    "baseline = dict(zip(range(1, 25), np.zeros(24)))\n",
+    "control_group = {}\n",
+    "test_group = {}\n",
+    "for subject, story, fnr, frame, label in csv_generator:\n",
+    "    features = extract_frame_features(frame)\n",
+    "    if (story==0):\n",
+    "        baseline_count[subject] = baseline_count[subject] + 1\n",
+    "        baseline = baseline[subject] + features\n",
+    "        continue\n",
+    "    update_dict = control_group if (game.loc[sub].values[0]==0) else test_group\n",
+    "    if ((subject, story) not in update_dict): \n",
+    "        update_dict[(subject, story)] = np.array([features, label])\n",
+    "    else:\n",
+    "        update_dict[(subject, story)] = np.vstack((update_dict[(subject, story)], [features, label]))\n",
     "\n",
-    "\n",
-    "# print bin_places "
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "300",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-64-a157a8ee34d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m300\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m# arr = np.array(range(10))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# arr1 = np.array(range(10))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 300"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "di = dict(zip(range(30), range(30)))\n",
+    "# arr = np.array(range(10))\n",
+    "# arr1 = np.array(range(10))\n",
+    "# arr = [arr, 10]\n",
+    "# arr = np.vstack((arr,[arr1, 10]))\n",
+    "# arr = np.vstack((arr,[arr1, 10]))\n",
+    "# # arr = np.hstack((arr,arr))\n",
+    "# type(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0,\n",
+       " 1: 1,\n",
+       " 2: 2,\n",
+       " 3: 3,\n",
+       " 4: 4,\n",
+       " 5: 5,\n",
+       " 6: 6,\n",
+       " 7: 7,\n",
+       " 8: 8,\n",
+       " 9: 9,\n",
+       " 10: 10,\n",
+       " 11: 11,\n",
+       " 12: 12,\n",
+       " 13: 13,\n",
+       " 14: 14,\n",
+       " 15: 15,\n",
+       " 16: 16,\n",
+       " 17: 17,\n",
+       " 18: 18,\n",
+       " 19: 19,\n",
+       " 20: 20,\n",
+       " 21: 21,\n",
+       " 22: 22,\n",
+       " 23: 23,\n",
+       " 24: 24,\n",
+       " 25: 25,\n",
+       " 26: 26,\n",
+       " 27: 27,\n",
+       " 28: 28,\n",
+       " 29: 29}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# with open('test.pickle', 'wb') as f:\n",
+    "#     pickle.dump(di, f)\n",
+    "# with open('test.pickle', 'rb') as fil:\n",
+    "#     testdi = pickle.load(fil)\n",
+    "# testdi"
+   ]
   }
  ],
  "metadata": {
