--- a/thermal_preprocess.ipynb
+++ b/thermal_preprocess.ipynb
@@ -375,12 +375,19 @@
     "    for c, p in zip(col, patches):\n",
     "        plt.setp(p, 'facecolor', cm(c))\n",
     "    plt.savefig(\"temp.png\", dpi=1000)\n",
-    "    plt.show()\n"
+    "    plt.show()\n",
+    "\n",
+    "def save_as_image(image_matrix, name=\"temp.png\"):\n",
+    "    oldmin, oldmax= image_matrix.min(), image_matrix.max()\n",
+    "    newmin, newmax= 0, 255\n",
+    "    image_matrix = (((image_matrix-oldmin)*(newmax-newmin))/(oldmax-oldmin)) + newmin\n",
+    "    image_matrix = map(lambda arr: map(lambda x: int(x), arr), image_matrix)\n",
+    "    png.fromarray(image_matrix, 'L').save(name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -389,13 +396,313 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: 0.0, 2: 0.0, 3: 0.0, 4: 0.0, 5: 0.0, 6: 0.0, 7: 0.0, 8: 0.0, 9: 0.0, 10: 0.0, 11: 0.0, 12: 0.0, 13: 0.0, 14: 0.0, 15: 0.0, 16: 0.0, 17: 0.0, 18: 0.0, 19: 0.0, 20: 0.0, 21: 0.0, 22: 0.0, 23: 0.0, 24: 0.0}\n"
+      "(10, 369)\n",
+      "(10, 37)\n",
+      "(10, 370)\n",
+      "(10, 371)\n",
+      "(10, 372)\n",
+      "(10, 373)\n",
+      "(10, 374)\n",
+      "(10, 375)\n",
+      "(10, 376)\n",
+      "(10, 377)\n",
+      "(10, 378)\n",
+      "(10, 4)\n",
+      "(10, 414)\n",
+      "(10, 43)\n",
+      "(10, 445)\n",
+      "(10, 45)\n",
+      "(10, 470)\n",
+      "(10, 471)\n",
+      "(10, 472)\n",
+      "(10, 473)\n",
+      "(10, 474)\n",
+      "(10, 475)\n",
+      "(10, 476)\n",
+      "(10, 477)\n",
+      "(10, 478)\n",
+      "(10, 479)\n",
+      "(10, 48)\n",
+      "(10, 480)\n",
+      "(10, 481)\n",
+      "(10, 482)\n",
+      "(10, 483)\n",
+      "(10, 484)\n",
+      "(10, 451)\n",
+      "(10, 452)\n",
+      "(10, 453)\n",
+      "(10, 454)\n",
+      "(10, 455)\n",
+      "(10, 456)\n",
+      "(10, 457)\n",
+      "(10, 458)\n",
+      "(10, 459)\n",
+      "(10, 46)\n",
+      "(10, 460)\n",
+      "(10, 461)\n",
+      "(10, 462)\n",
+      "(10, 463)\n",
+      "(10, 464)\n",
+      "(10, 465)\n",
+      "(10, 466)\n",
+      "(10, 467)\n",
+      "(10, 468)\n",
+      "(10, 469)\n",
+      "(10, 486)\n",
+      "(10, 487)\n",
+      "(10, 488)\n",
+      "(10, 489)\n",
+      "(10, 49)\n",
+      "(10, 490)\n",
+      "(10, 491)\n",
+      "(10, 492)\n",
+      "(10, 493)\n",
+      "(10, 494)\n",
+      "(10, 495)\n",
+      "(10, 496)\n",
+      "(10, 497)\n",
+      "(10, 498)\n",
+      "(10, 499)\n",
+      "(10, 5)\n",
+      "(10, 1029)\n",
+      "(10, 1044)\n",
+      "(10, 106)\n",
+      "(10, 1075)\n",
+      "(10, 1090)\n",
+      "(10, 1105)\n",
+      "(10, 1146)\n",
+      "(10, 1161)\n",
+      "(10, 1177)\n",
+      "(10, 1192)\n",
+      "(10, 1207)\n",
+      "(10, 1222)\n",
+      "(10, 1238)\n",
+      "(10, 500)\n",
+      "(10, 501)\n",
+      "(10, 502)\n",
+      "(10, 503)\n",
+      "(10, 504)\n",
+      "(10, 505)\n",
+      "(10, 506)\n",
+      "(10, 507)\n",
+      "(10, 508)\n",
+      "(10, 509)\n",
+      "(10, 51)\n",
+      "(10, 510)\n",
+      "(10, 511)\n",
+      "(10, 512)\n",
+      "(10, 513)\n",
+      "(10, 514)\n",
+      "(10, 516)\n",
+      "(10, 517)\n",
+      "(10, 518)\n",
+      "(10, 519)\n",
+      "(10, 52)\n",
+      "(10, 520)\n",
+      "(10, 521)\n",
+      "(10, 522)\n",
+      "(10, 523)\n",
+      "(10, 524)\n",
+      "(10, 525)\n",
+      "(10, 526)\n",
+      "(10, 527)\n",
+      "(10, 528)\n",
+      "(10, 529)\n",
+      "(10, 53)\n",
+      "(10, 531)\n",
+      "(10, 532)\n",
+      "(10, 533)\n",
+      "(10, 534)\n",
+      "(10, 535)\n",
+      "(10, 536)\n",
+      "(10, 537)\n",
+      "(10, 538)\n",
+      "(10, 539)\n",
+      "(10, 54)\n",
+      "(10, 540)\n",
+      "(10, 541)\n",
+      "(10, 542)\n",
+      "(10, 543)\n",
+      "(10, 544)\n",
+      "(10, 545)\n",
+      "(10, 547)\n",
+      "(10, 548)\n",
+      "(10, 549)\n",
+      "(10, 55)\n",
+      "(10, 565)\n",
+      "(10, 566)\n",
+      "(10, 567)\n",
+      "(10, 568)\n",
+      "(10, 569)\n",
+      "(10, 57)\n",
+      "(10, 570)\n",
+      "(10, 571)\n",
+      "(10, 572)\n",
+      "(10, 573)\n",
+      "(10, 574)\n",
+      "(10, 575)\n",
+      "(10, 577)\n",
+      "(10, 578)\n",
+      "(10, 579)\n",
+      "(10, 58)\n",
+      "(10, 580)\n",
+      "(10, 581)\n",
+      "(10, 582)\n",
+      "(10, 583)\n",
+      "(10, 584)\n",
+      "(10, 585)\n",
+      "(10, 586)\n",
+      "(10, 587)\n",
+      "(10, 588)\n",
+      "(10, 589)\n",
+      "(10, 59)\n",
+      "(10, 590)\n",
+      "(10, 592)\n",
+      "(10, 593)\n",
+      "(10, 594)\n",
+      "(10, 595)\n",
+      "(10, 596)\n",
+      "(10, 597)\n",
+      "(10, 598)\n",
+      "(10, 599)\n",
+      "(10, 6)\n",
+      "(10, 60)\n",
+      "(10, 600)\n",
+      "(10, 601)\n",
+      "(10, 602)\n",
+      "(10, 603)\n",
+      "(10, 604)\n",
+      "(10, 605)\n",
+      "(10, 606)\n",
+      "(10, 607)\n",
+      "(10, 608)\n",
+      "(10, 609)\n",
+      "(10, 61)\n",
+      "(10, 610)\n",
+      "(10, 611)\n",
+      "(10, 612)\n",
+      "(10, 613)\n",
+      "(10, 614)\n",
+      "(10, 615)\n",
+      "(10, 616)\n",
+      "(10, 617)\n",
+      "(10, 618)\n",
+      "(10, 619)\n",
+      "(10, 62)\n",
+      "(10, 699)\n",
+      "(10, 7)\n",
+      "(10, 70)\n",
+      "(10, 71)\n",
+      "(10, 715)\n",
+      "(10, 716)\n",
+      "(10, 717)\n",
+      "(10, 718)\n",
+      "(10, 719)\n",
+      "(10, 72)\n",
+      "(10, 720)\n",
+      "(10, 721)\n",
+      "(10, 722)\n",
+      "(10, 723)\n",
+      "(10, 724)\n",
+      "(10, 725)\n",
+      "(10, 726)\n",
+      "(10, 727)\n",
+      "(10, 728)\n",
+      "(10, 729)\n",
+      "(10, 73)\n",
+      "(10, 730)\n",
+      "(10, 731)\n",
+      "(10, 732)\n",
+      "(10, 733)\n",
+      "(10, 734)\n",
+      "(10, 735)\n",
+      "(10, 736)\n",
+      "(10, 737)\n",
+      "(10, 738)\n",
+      "(10, 739)\n",
+      "(10, 74)\n",
+      "(10, 359)\n",
+      "(10, 36)\n",
+      "(10, 360)\n",
+      "(10, 368)\n",
+      "(10, 450)\n",
+      "(10, 47)\n",
+      "(10, 485)\n",
+      "(10, 50)\n",
+      "(10, 515)\n",
+      "(10, 530)\n",
+      "(10, 546)\n",
+      "(10, 576)\n",
+      "(10, 591)\n",
+      "(10, 621)\n",
+      "(10, 622)\n",
+      "(10, 623)\n",
+      "(10, 624)\n",
+      "(10, 625)\n",
+      "(10, 626)\n",
+      "(10, 627)\n",
+      "(10, 628)\n",
+      "(10, 629)\n",
+      "(10, 63)\n",
+      "(10, 630)\n",
+      "(10, 631)\n",
+      "(10, 632)\n",
+      "(10, 633)\n",
+      "(10, 634)\n",
+      "(10, 635)\n",
+      "(10, 636)\n",
+      "(10, 637)\n",
+      "(10, 638)\n",
+      "(10, 639)\n",
+      "(10, 64)\n",
+      "(10, 640)\n",
+      "(10, 641)\n",
+      "(10, 642)\n",
+      "(10, 643)\n",
+      "(10, 644)\n",
+      "(10, 645)\n",
+      "(10, 646)\n",
+      "(10, 647)\n",
+      "(10, 648)\n",
+      "(10, 649)\n",
+      "(10, 65)\n",
+      "(10, 650)\n",
+      "(10, 652)\n",
+      "(10, 653)\n",
+      "(10, 654)\n",
+      "(10, 655)\n",
+      "(10, 656)\n",
+      "(10, 657)\n",
+      "(10, 658)\n",
+      "(10, 659)\n",
+      "(10, 66)\n",
+      "(10, 660)\n",
+      "(10, 661)\n",
+      "(10, 662)\n",
+      "(10, 663)\n",
+      "(10, 664)\n",
+      "(10, 665)\n",
+      "(10, 666)\n",
+      "(10, 667)\n",
+      "(10, 668)\n",
+      "(10, 669)\n",
+      "(10, 67)\n",
+      "(10, 670)\n",
+      "(10, 671)\n",
+      "(10, 672)\n",
+      "(10, 673)\n",
+      "(10, 674)\n",
+      "(10, 675)\n",
+      "(10, 676)\n",
+      "(10, 677)\n",
+      "(10, 678)\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
+    "import pickle\n",
     "from pandas import DataFrame\n",
     "from matplotlib import pyplot as plt\n",
     "import os\n",
@@ -459,48 +766,116 @@
     "baseline = dict(zip(range(1, 25), np.zeros(24)))\n",
     "control_group = {}\n",
     "test_group = {}\n",
+    "c = 0\n",
     "for subject, story, fnr, frame, label in csv_generator:\n",
+    "    print (subject, fnr)\n",
+    "    c +=1\n",
+    "    if (c == 300): break\n",
     "    features = extract_frame_features(frame)\n",
     "    if (story==0):\n",
     "        baseline_count[subject] = baseline_count[subject] + 1\n",
-    "        baseline = baseline[subject] + features\n",
+    "        baseline[subject] = baseline[subject] + features\n",
     "        continue\n",
-    "    update_dict = control_group if (game.loc[sub].values[0]==0) else test_group\n",
+    "    update_dict = control_group if (game.loc[subject].values[0]==0) else test_group\n",
     "    if ((subject, story) not in update_dict): \n",
     "        update_dict[(subject, story)] = np.array([features, label])\n",
     "    else:\n",
     "        update_dict[(subject, story)] = np.vstack((update_dict[(subject, story)], [features, label]))\n",
     "\n",
-    "\n"
+    "\n",
+    "for key in baseline.keys():\n",
+    "    if baseline_count[key]==0: continue\n",
+    "    baseline[key] = baseline[key]/baseline_count[key]\n",
+    "\n",
+    "def serialize(group, fi):\n",
+    "    with open(fi, 'wb') as f:\n",
+    "        pickle.dump(group, f)\n",
+    "\n",
+    "serialize(control_group, \"control_group_data.pickle\")\n",
+    "serialize(test_group, \"test_group.pickle\")\n",
+    "serialize(baseline, \"baseline.pickle\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "300",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-64-a157a8ee34d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m300\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m# arr = np.array(range(10))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# arr1 = np.array(range(10))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 300"
-     ]
+     "data": {
+      "text/plain": [
+       "{1: 0.0,\n",
+       " 2: 0.0,\n",
+       " 3: 0.0,\n",
+       " 4: 0.0,\n",
+       " 5: 0.0,\n",
+       " 6: 0.0,\n",
+       " 7: 0.0,\n",
+       " 8: 0.0,\n",
+       " 9: 0.0,\n",
+       " 10: array([  3.20036900e+01,   3.51235482e+01,   3.33830720e+01,\n",
+       "          3.11985825e+00,   1.38975000e+02,   1.59775000e+02,\n",
+       "          1.65275000e+02,   1.59350000e+02,   1.80525000e+02,\n",
+       "          1.89025000e+02,   1.85250000e+02,   2.20075000e+02,\n",
+       "          2.27875000e+02,   2.40050000e+02,   2.18300000e+02,\n",
+       "          2.33000000e+02,   2.25900000e+02,   1.96600000e+02,\n",
+       "          2.19725000e+02,   2.16225000e+02,   2.11950000e+02,\n",
+       "          1.90950000e+02,   2.11000000e+02,   2.18050000e+02,\n",
+       "          1.99550000e+02,   2.21100000e+02,   2.25900000e+02,\n",
+       "          2.32850000e+02,   2.12375000e+02,   2.44475000e+02,\n",
+       "          2.58175000e+02,   2.63400000e+02,   2.65175000e+02,\n",
+       "          2.47850000e+02,   2.85175000e+02,   2.96925000e+02,\n",
+       "          3.19825000e+02,   3.24725000e+02,   3.13725000e+02,\n",
+       "          3.27500000e+02,   3.24725000e+02,   2.99500000e+02,\n",
+       "          2.98400000e+02,   2.62850000e+02,   2.86550000e+02,\n",
+       "          3.00275000e+02,   3.14100000e+02,   3.14750000e+02,\n",
+       "          2.89150000e+02,   2.29200000e+02,   2.15500000e+02,\n",
+       "          1.75450000e+02,   1.47250000e+02,   1.31175000e+02,\n",
+       "          1.16075000e+02,   1.04325000e+02,   1.00050000e+02,\n",
+       "          8.32250000e+01,   8.52000000e+01,   7.18500000e+01,\n",
+       "          5.56500000e+01,   4.00500000e+01,   2.95250000e+01,\n",
+       "          2.20500000e+01,   1.63250000e+01,   1.17000000e+01,\n",
+       "          8.37500000e+00,   5.87500000e+00,   2.95000000e+00,\n",
+       "          1.75000000e+00,   4.50000000e-01,   2.25000000e-01,\n",
+       "          7.50000000e-02,   7.50000000e-02,   2.50000000e-02,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
+       "          0.00000000e+00,   0.00000000e+00]),\n",
+       " 11: 0.0,\n",
+       " 12: 0.0,\n",
+       " 13: 0.0,\n",
+       " 14: 0.0,\n",
+       " 15: 0.0,\n",
+       " 16: 0.0,\n",
+       " 17: 0.0,\n",
+       " 18: 0.0,\n",
+       " 19: 0.0,\n",
+       " 20: 0.0,\n",
+       " 21: 0.0,\n",
+       " 22: 0.0,\n",
+       " 23: 0.0,\n",
+       " 24: 0.0}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pickle\n",
-    "di = dict(zip(range(30), range(30)))\n",
-    "# arr = np.array(range(10))\n",
-    "# arr1 = np.array(range(10))\n",
-    "# arr = [arr, 10]\n",
-    "# arr = np.vstack((arr,[arr1, 10]))\n",
-    "# arr = np.vstack((arr,[arr1, 10]))\n",
-    "# # arr = np.hstack((arr,arr))\n",
-    "# type(arr)"
+    "def deserialize(f):\n",
+    "    with open(f, 'rb') as fil:\n",
+    "        return pickle.load(fil)\n",
+    "\n",
+    "baseline = deserialize(\"baseline.pickle\")\n",
+    "baseline"
    ]
   },
   {
