Add cross-validation for audio processing

--- a/thermal_preprocess.ipynb
+++ b/thermal_preprocess.ipynb
@@ -880,55 +880,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{0: 0,\n",
-       " 1: 1,\n",
-       " 2: 2,\n",
-       " 3: 3,\n",
-       " 4: 4,\n",
-       " 5: 5,\n",
-       " 6: 6,\n",
-       " 7: 7,\n",
-       " 8: 8,\n",
-       " 9: 9,\n",
-       " 10: 10,\n",
-       " 11: 11,\n",
-       " 12: 12,\n",
-       " 13: 13,\n",
-       " 14: 14,\n",
-       " 15: 15,\n",
-       " 16: 16,\n",
-       " 17: 17,\n",
-       " 18: 18,\n",
-       " 19: 19,\n",
-       " 20: 20,\n",
-       " 21: 21,\n",
-       " 22: 22,\n",
-       " 23: 23,\n",
-       " 24: 24,\n",
-       " 25: 25,\n",
-       " 26: 26,\n",
-       " 27: 27,\n",
-       " 28: 28,\n",
-       " 29: 29}"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('project_data', [], ['labels.csv', 'thermal_timestamps.csv'])\n"
+     ]
+    },
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-3416eb49a4be>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mwalker\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwalk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"project_data\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mprint\u001b[0m \u001b[0mwalker\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m: "
+     ]
     }
    ],
    "source": [
-    "# with open('test.pickle', 'wb') as f:\n",
-    "#     pickle.dump(di, f)\n",
-    "# with open('test.pickle', 'rb') as fil:\n",
-    "#     testdi = pickle.load(fil)\n",
-    "# testdi"
+    "import os \n",
+    "walker = os.walk(\"project_data\")\n",
+    "for i in range(2):\n",
+    "    print walker.next()"
    ]
   }
  ],
