Audio processing segregation and cross-validation evaluation

--- a/audio_preproces.ipynb
+++ b/audio_preproces.ipynb
@@ -27,6 +27,35 @@
     "        copyfile(os.path.join(root, f), os.path.join(movdir, f))\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.623188405797\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.metrics import mean_squared_error as mse\n",
+    "\n",
+    "def deserialize(f):\n",
+    "    with open(f, \"rb\") as ser:\n",
+    "        return pickle.load(ser)\n",
+    "\n",
+    "\n",
+    "audio_prediction = deserialize(\"audio_prediction.pickle\")\n",
+    "results = np.array(audio_prediction.values()).astype(int)\n",
+    "print 1 - mse(results[:, 0], results[:, 1])"
+   ]
   }
  ],
  "metadata": {
