--- a/prediction_models.ipynb
+++ b/prediction_models.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Audio model evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,99 +18,73 @@
     "import pandas as pd\n",
     "from pyAudioAnalysis import audioTrainTest as aT\n",
     "\n",
-    "audio_path = \"data_audio\"\n",
-    "all_files = []\n",
     "labels = pd.read_csv(\"project_data/labels.csv\", usecols=[0,1], dtype={\"id\": int, \"label\": str}, index_col=0)\n",
-    "\n",
     "\n",
     "def get_label_by_story(subject, story):\n",
     "    return labels.loc[subject].values[0][story-1]\n",
     "\n",
-    "for root, dirs, files in os.walk(audio_path):\n",
-    "    for f in files:\n",
-    "        all_files.append(os.path.join(root, f))\n",
+    "def lou_cross_validation_audio(audio_path, save_results=None):\n",
+    "    save_results = audio_path if save_results==None else save_results\n",
+    "    all_files = []\n",
+    "    for root, dirs, files in os.walk(audio_path):\n",
+    "        for f in files:\n",
+    "            all_files.append(os.path.join(root, f))\n",
+    "    predictions = {}\n",
+    "    for trfile in all_files:\n",
+    "        originalname = trfile\n",
+    "        inter = originalname.split(\"/\")[-1].strip(\"sub\").strip(\".wav\").split(\"_\")\n",
+    "        sub, st = int(inter[0]), int(inter[1])\n",
+    "        movedname = originalname.replace(originalname.split(\"/\")[1], \"fold\")\n",
+    "        os.rename(originalname, movedname)\n",
+    "        aT.featureAndTrain([audio_path + \"/lie\", audio_path + \"/truth\"], 1.0, 1.0, aT.shortTermWindow, aT.shortTermStep, \"svm\", \"audio_models/svm/svm\", True)\n",
+    "        prediction = aT.fileClassification(movedname, \"audio_models/svm/svm\", \"svm\")[1][1]\n",
+    "        prediction = 1 if prediction>0.5 else 0\n",
+    "        predictions[(sub, st)] = [prediction, get_label_by_story(sub, st)]\n",
+    "        os.rename(movedname, originalname)\n",
     "\n",
-    "predictions = {}\n",
-    "for trfile in all_files:\n",
-    "    originalname = trfile\n",
-    "    print originalname\n",
-    "    inter = originalname.split(\"/\")[-1].strip(\"sub\").strip(\".wav\").split(\"_\")\n",
-    "    sub, st = int(inter[0]), int(inter[1])\n",
-    "    movedname = originalname.replace(originalname.split(\"/\")[1], \"fold\")\n",
-    "    os.rename(originalname, movedname)\n",
-    "    aT.featureAndTrain([\"data_audio/lie\",\"data_audio/truth\"], 1.0, 1.0, aT.shortTermWindow, aT.shortTermStep, \"svm\", \"audio_models/svm/svm\", True)\n",
-    "    prediction = aT.fileClassification(movedname, \"audio_models/svm/svm\", \"svm\")[1][1]\n",
-    "    # prediction = 1 if prediction>0.5 else 0\n",
-    "    predictions[(sub, st)] = [prediction, get_label_by_story(sub, st)]\n",
-    "    os.rename(movedname, originalname)\n",
+    "    with open(save_results + \".pickle\", \"wb\") as f:\n",
+    "        pickle.dump(predictions, f)\n",
     "\n",
-    "with open(\"audio_probability_prediction.pickle\", \"wb\") as f:\n",
-    "    pickle.dump(predictions, f)"
+    "control_group = \"audio_control_group\"\n",
+    "test_group = \"audio_test_group\"\n",
+    "lou_cross_validation_audio(control_group)\n",
+    "lou_cross_validation_audio(test_group)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.metrics import mean_squared_error as mse\n",
+    "\n",
     "def deserialize(f):\n",
     "    with open(f, \"rb\") as ser:\n",
-    "        return pickle.load(ser)"
+    "        return pickle.load(ser)\n",
+    "\n",
+    "\n",
+    "def evaluate_predictions(filein):\n",
+    "    audio_prediction = deserialize(filein)\n",
+    "    results = np.array(audio_prediction.values()).astype(int)\n",
+    "#     results mse(results[:, 0], results[:, 1])\n",
+    "    results = results[:, 0] - results[:, 1]\n",
+    "    results = (len(audio_prediction) - sum(abs(results)))/float(len(audio_prediction))\n",
+    "    print \"Correct classification rate of {}: {:.4f}%\".format(filein.strip(\".pickle\"), results*100)\n",
+    "\n",
+    "# evaluate_predictions(\"audio_control_group.pickle\")\n",
+    "# evaluate_predictions(\"audio_test_group.pickle\")\n",
+    "evaluate_predictions(\"audio_complete_group.pickle\")\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "import pandas as pd\n",
-    "label_folder = \"project_data/labels.csv\"\n",
-    "game = pd.read_csv(label_folder, usecols=[0, 3], dtype={\"id\": int, \"game\": int}, index_col=0)\n",
-    "game.loc[0].values[0]==0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IOError",
-     "evalue": "[Errno 2] No such file or directory: 'audio_probability_prediction.pickle'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-37-5a068b959fb8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmean_squared_error\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0maudio_prediction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdeserialize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"audio_probability_prediction.pickle\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maudio_prediction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mmse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-16-803e8cb32f85>\u001b[0m in \u001b[0;36mdeserialize\u001b[0;34m(f)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mdeserialize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mser\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mser\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: 'audio_probability_prediction.pickle'"
-     ]
-    }
-   ],
-   "source": [
-    "import pickle\n",
-    "import numpy as np\n",
-    "from sklearn.metrics import mean_squared_error as mse\n",
-    "audio_prediction = deserialize(\"audio_probibility_prediction.pickle\")\n",
-    "results = np.array(audio_prediction.values()).astype(int)\n",
-    "print mse(results[:, 0], results[:, 1])\n",
-    "# results = results[:, 0] - results[:, 1]\n",
-    "# results = (len(audio_prediction) - sum(abs(results)))/float(len(audio_prediction))\n",
-    "# print \"Correctly classification rate: {:.4f}%\".format(results*100)"
+    "# Thermal model evaluation"
    ]
   }
  ],
